# pyar

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: api.md  index.md  pyar.drawio
docs/API/: core.md  index.md
docs/api/: core.md  index.md  outliers.md
docs/developer/: index.md
docs/examples/: index.md
src/pyar/: core.py  outlier_detection.py
tests/: test_core.py
