[project]
name = "pyar"
version = "0.1.0"
description = "A sleek Python package"
dependencies = [
    "numpy>=2.4.6"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
